# telar

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  render.yaml
docs/: CURSOR-AUTOMATIONS.md  DESARROLLO.md  DI-2-WINDOWS-BLE.md  DISTRIBUCION-MACOS.md  DISTRIBUCION-RELEASES.md  EED Escala de Estilos Defensivos Psi Lab.md  HANDOUTS-PILOT-AGENT.md  LANDING.md  Manual Psicoterapia LAB 2026.md  Manual Telar 2026.md  PITCH-1-PAGINA.md  SCRUM.md  SUSCRIPCIONES.md  Términos y Condiciones _ Políticas Privacidad _ Psicoterapia LAB.md  Términos y Condiciones _ Políticas Privacidad _ Telar.md  WORKFLOW.md
landing/: index.html  neurofeedback.html  package-lock.json  package.json  privacidad.html
python/: analyze_session.py  requirements.txt
scripts/: build-app.sh  build-sidecar.sh  cleanup-duplicate-apps.sh  deploy-subscription-api.sh  dev-server.sh  dev.sh  finish-iteration.sh  import-handouts-from-downloads.py  install-app.sh  open-app.sh  package-windows-installer.sh  publish-github-release.sh  qa-smoke.sh  sign-macos-app.sh  stamp-frontend.sh  (+1 more)
server/: README.md  (+3 more)
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_seed.sql  003_tags_notes.sql  004_notes_starred.sql  005_notes_kindle.sql  006_space_checks.sql  007_fix_module_order.sql  008_notes_author.sql  009_convenios_goals.sql  010_cleanup_test_patients.sql
src-tauri/src/: ai_api.rs  lib.rs  main.rs  muse_ble.rs  secure_db.rs  subscription_api.rs  touch_id.rs  usage_ping.rs
(+145 files in other folders)
