[package]
name = "telar"
version = "0.1.0"
description = "Gestión local de pacientes de neurofeedback"
authors = ["Felipe Uppen"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[lib]
name = "telar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
btleplug = "0.11"
tokio = { version = "1", features = ["time", "sync", "rt"] }
futures = "0.3"
uuid = "1"
once_cell = "1"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl", "serde_json"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSRunLoop", "NSDate", "NSString", "NSObjCRuntime"] }
objc2-local-authentication = "0.3"
block2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
